2011-08-31  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] Unreviewed gardening.
        Skipped the wrong test in a previous gardening.

        * platform/qt/Skipped:

2011-08-31  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] Incorrect results for svg/custom/getBBox-js.svg
        Unreviewed gardening.

        * platform/qt/Skipped:

2011-08-31  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, unskip fast/css/square-button-appearance.html which
        got baselines in r93953.

        * platform/gtk/test_expectations.txt:

2011-08-31  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] 3 test started crashing somewhere between r93878-r93935
        https://bugs.webkit.org/show_bug.cgi?id=67197

        * platform/qt/Skipped: Unskip tests, because bug was fixed by r94088.

2011-08-31  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skip failing fast/loader/location-port.html test on
        GTK.

        * platform/gtk/Skipped:

2011-08-31  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening.

        Add Qt specific expected files after r94111, update Qt specific expected files after r94109.

        Based on digging of Gabor Rapcsanyi.

        * platform/qt/fast/css-generated-content/table-row-before-after-child-add-expected.png:
        * platform/qt/fast/css-generated-content/table-row-before-after-child-add-expected.txt:
        * platform/qt/fast/css-generated-content/table-table-before-after-child-add-expected.png:
        * platform/qt/fast/css-generated-content/table-table-before-after-child-add-expected.txt:
        * platform/qt/fast/preloader/document-write-noscript-expected.png: Added.
        * platform/qt/fast/preloader/document-write-noscript-expected.txt: Added.

2011-08-31  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening. Add and update platform specific expected files after r94109.

        Based on digging of Gabor Rapcsanyi.
