@@ -137,7 +137,7 @@ var test = function()
             function didNavigateAnotherPage()
             {
                 InspectorTest.addResult("Navigated to test-navigation.html");
-                panel._toggleFormatSourceFiles();
+                panel._toggleFormatSource();
                 InspectorTest.showScriptSource("test-navigation.html", didShowAnotherPage);
             }
 
@@ -164,7 +164,7 @@ var test = function()
             function pausedInF2(callFrames)
             {
                 InspectorTest.captureStackTrace(callFrames);
-                panel._toggleFormatSourceFiles();
+                panel._toggleFormatSource();
                 InspectorTest.resumeExecution(next);
             }
         },
@@ -186,7 +186,7 @@ var test = function()
             {
                 dumpConsoleMessageURLs();
                 InspectorTest.addSniffer(WebInspector, "formatLinkText", InspectorTest.runAfterPendingDispatches.bind(InspectorTest, didFormatLinkText));
-                panel._toggleFormatSourceFiles();
+                panel._toggleFormatSource();
             }
 
             function didFormatLinkText()
