@@ -1,3 +1,9 @@
+2011-08-31  Pavel Podivilov  <podivilov@chromium.org>
+
+        Unreviewed, build fix after r94167.
+
+        * inspector/debugger/script-formatter.html:
+
 2011-08-31  Balazs Kelemen  <kbalazs@webkit.org>
 
         [Qt] Unreviewed gardening.
